--- a/styles/partials/grid-container.scss
+++ b/styles/partials/grid-container.scss
@@ -1,6 +1,6 @@
 .grid-container{
   display: grid;
-  grid-template-rows: 1fr 1fr 3fr 3fr 3fr 1fr;
+  grid-template-rows: 15px 30px repeat(3, 150px);
   grid-template-columns: auto 1fr 1fr auto;
   grid-template-areas:
     ". . . ."
